# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import usersRouter from "./users";
 import accountsRouter from "./accounts";
 import templatesRouter from "./templates";
 import emailsRouter from "./emails";
+import attachmentsRouter from "./attachments";
 import dashboardRouter from "./dashboard";
 
 const router: IRouter = Router();
@@ -15,6 +16,7 @@ router.use(usersRouter);
 router.use(accountsRouter);
 router.use(templatesRouter);
 router.use(emailsRouter);
+router.use(attachmentsRouter);
 router.use(dashboardRouter);
 
 export default router;
