# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./users";
 export * from "./accounts";
 export * from "./templates";
 export * from "./email_logs";
+export * from "./attachments";
